# engine-template

./: .env.example  .gitignore  Dockerfile  README.md  dev-compose.yml  dev_pipeline.py  dev_run.py  docker-compose.tools.yml  engine-template.code-workspace  engine.yaml  pyproject.toml
fixtures/juice-shop/: README.md  attack_plan_decide.json  attack_plan_filter.json  autoeg_exploit_generation.txt  autoeg_exploit_refinement.txt  autoeg_exploit_verdict.txt  autoeg_ptf_generation.txt  autoeg_ptf_refinement.txt  autoeg_testcase_generation.txt  demo_run.py  docker-compose.tools-all.yml  recon_tech_fingerprint.json  report_exec_summary.txt  weakness_gather_extract.json  weakness_gather_search_plan.json
fixtures/juice-shop/tools/: exa-search.json
src/: engine.py
src/hello_world/: engine.py
tests/: test_engine.py
